--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -110,6 +110,20 @@
                 </div>
               </div>
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Barangsiapa dengan sengaja melanggar peraturan server Pasal 1 akan dikenakan hukuman Kick dari server sampai dengan Ban IP.
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Alamat IP yang kamu gunakan untuk bermain di server ini adalah tanggung jawab penuh pengguna IP tersebut (kamu).
+                </div>
+              </div>
+            </li>
           </ol>
           <hr>
           <h5 class="card-title">Pasal 2 : Modifikasi Client dan Game</h5>
@@ -117,14 +131,14 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div>
-                  - 
+                  Pemain tidak diperbolehkan untuk memodifikasi client SA:MP atau game GTA San Andreas demi menguntungkan diri sendiri yang bisa berakibat kepada merugikan orang lain dan juga server.
                 </div>
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div>
-                  -
+                  Barangsiapa dengan sengaja melanggar peraturan server Pasal 2 akan dikenakan hukuman dengan Pemblokiran Akun UCP atau alamat IP.
                 </div>
               </div>
             </li>
