--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -143,7 +143,63 @@
               </div>
             </li>
           </ol>
+      </div>
+      <center>
+        <h5>BAB II</h5>
+        <h5>ROLEPLAY</h5><hr>
+      </center>
+      <div class="alert alert-success" role="alert">
+        <h5 class="card-title">Pasal 3 : Kewajiban Roleplay</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Player diwajibkan untuk selalu ber-Roleplay dalam keadaan apapun pada saat berada di dalam Game. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Player dibebaskan dari kewajibannya ber-Roleplay saat dalam kondidi sebagai berikut :
+                </div>
+                  a. Berurusan dengan Administrator atau Helper Server.<br>
+                  b. Sedang berada di dalam zona OOC atau di dalam penjara Admin.
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  -
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  -
+                </div>
+              </div>
+            </li>
+          </ol>
           <hr>
+          <h5 class="card-title">Pasal 4 : Penolakan Ajakan Roleplay</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  -
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  -
+                </div>
+              </div>
+            </li>
+          </ol>
       </div>
     </div>
 
