--- a/update.html
+++ b/update.html
@@ -96,6 +96,27 @@
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Log Discord</div>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Warning & Banned.
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Log Discord</div>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Death.
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Log Discord</div>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Korup (Pengambilan uang Pemerintahan).
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
           </ol>
           <hr>
           <p class="mb-0">This posted in <b>11 January 2024</b>.</p>
