--- a/update.html
+++ b/update.html
@@ -99,21 +99,9 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Log Discord</div>
-                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Warning & Banned.
-              </div>
-              <span class="badge bg-primary rounded-pill">FIX</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">Update Log Discord</div>
-                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Death.
-              </div>
-              <span class="badge bg-primary rounded-pill">FIX</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">Update Log Discord</div>
-                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Log Discord Korup (Pengambilan uang Pemerintahan).
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Discord Log Warning & Banned. <br>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Discord Log Death. <br>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add Discord Log Korup (Pengambilan uang Negara). <br>
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
