--- a/update.html
+++ b/update.html
@@ -103,6 +103,10 @@
                 <i class='bx bxs-plus-circle' style="color:green;"></i> Add Discord Log Death. <br>
                 <i class='bx bxs-plus-circle' style="color:green;"></i> Add Discord Log Korup (Pengambilan uang Negara). <br>
               </div>
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update FIX BUG Locker Faction</div>
+                <i class='bx bxs-upvote' style="color:blue;"></i> Update BUG Membuat Locker Faction.
+              </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
           </ol>
