--- a/update.html
+++ b/update.html
@@ -108,7 +108,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update FIX BUG Locker Faction</div>
-                <i class='bx bxs-upvote' style="color:blue;"></i> Update BUG Membuat Locker Faction.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Update Fixed BUG Membuat Locker Faction.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
