--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -100,14 +100,14 @@
         <tbody>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
-            <td><b style="color:darkorange;">William Scout</b></td>
-            <td><b style="color:purple;">SilumanKatak</b></td>
+            <td><b style="color:darkorange;">Ucin Vird</b></td>
+            <td><b style="color:darkgray;">Ucin</b></td>
             <td><b style="color:darkorange;">Governor</b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
-            <td><b style="color:darkorange;"> - </b></td>
-            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;">Nicholas Scout</b></td>
+            <td><b style="color:purple;">SilumanKatak</b></td>
             <td><b style="color:darkorange;">Deputy Governor</b></td>
           </tr>
           <tr class="table-light">
