--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkorange;"><i class='bx bxs-bank'></i> Government <i class='bx bxs-bank'></i></h5></center>
+        <center><h2 style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:60px;">   Government   <img src="../img/government-logo.png" style="max-width:60px;"></h2></center>
       </div>
     </div>
 
@@ -99,79 +99,79 @@
         </thead>
         <tbody>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;">Ucin Vird</b></td>
             <td><b style="color:darkgray;">Ucin</b></td>
             <td><b style="color:darkorange;">Governor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;">Nicholas Scout</b></td>
             <td><b style="color:purple;">SilumanKatak</b></td>
             <td><b style="color:darkorange;">Deputy Governor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Regional People's Representative</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary Regional</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Governor's Staff</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Religion</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Law</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Lawyer</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Treasurer</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Licensor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Bodyguard</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Driver</b></td>
