--- a/about.html
+++ b/about.html
@@ -86,9 +86,10 @@
       <div class="card text-center">
         <div class="card-body">
           <h5 class="card-title">Sejarah dibentuknya server</h5>
-          <p class="card-text">Server ini direncanakan oleh 3 orang pendiri utama yang sekarang menjadi Founder di server ini, dari rencana mereka membuat server hanya satu orang yang memiliki dana untuk menyewa jasa Developer, dan akhirnya kami menemukan Developer yang cocok dengan kami dan membantu memperbaiki kekurangan di server. Ingin melihat lebih banyak tentang staff?</p>
-          <a href="moreinformation/admininformation.html" class="btn btn-primary">Click here!</a>
-        </div>
+          <div class="container"><p class="card-text">Server ini direncanakan oleh 3 orang pendiri utama yang sekarang menjadi Founder di server ini, dari rencana mereka membuat server hanya satu orang yang memiliki dana untuk menyewa jasa Developer, dan akhirnya kami menemukan Developer yang cocok dengan kami dan membantu memperbaiki kekurangan di server. Ingin melihat lebih banyak tentang staff?</p>
+          <a href="moreinformation/admininformation.html" class="btn btn-primary">Staff List!</a></div><hr>
+          <h5 class="card-title">Sistem server</h5>
+          <div class="container"><p class="card-text">Server Magnefica Roleplay dibuat untuk client PC dan juga Android. Kami menyediakan fitur Voice and Chat untuk berkomunikasi di dalam Roleplay, dan Server kami menggunakan sistem keuangan dolar.</p></div>
       </div>
     </div>
 
@@ -96,9 +97,10 @@
       <div class="card-header">
         Contact via WhatsApp
       </div>
+    <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card m-2 p-4">
             <div class="card-body">
               <h5 class="card-title">Owner Server</h5>
               <p class="card-text">Hello, my nickname is Hengky. I'm a Owner Server.</p>
@@ -107,7 +109,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card m-2 p-4">
             <div class="card-body">
               <h5 class="card-title">Founder Server</h5>
               <p class="card-text">Hello, my nickname is Kenjo. I'm a Founder Server.</p>
@@ -116,7 +118,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card m-2 p-4">
             <div class="card-body">
               <h5 class="card-title">Developer Web</h5>
               <p class="card-text">Hello, my nickname is Nicholas. I'm a Developer Web.</p>
@@ -125,7 +127,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card m-2 p-4">
             <div class="card-body">
               <h5 class="card-title">Developer SAMP</h5>
               <p class="card-text">Hello, my nickname is Riel. I'm a Developer SAMP.</p>
@@ -135,6 +137,7 @@
         </div>
       </div>
     </div>
+  </div>
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
