--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -80,12 +80,11 @@
     </nav>
     <!--body-->
     <div class="card">
-      <div class="card-header">
-        <center><h2 style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:60px;">   Government   <img src="../img/government-logo.png" style="max-width:60px;"></h2></center>
-      </div>
+      <img src="../img/banner-gov.png" style="border-radius: 50px; border-bottom: 2px solid black;max-height: 100px;">
     </div>
 
     <!--content-->
+      <center><img src="../img/government-logo.png" style="max-width:50%; border-radius: 50%; margin-top: 30px; box-shadow: 0px 0px 20px purple;"></center>
 
     <div class="container mt-3">
       <table class="table table-bordered table-sm p-3 text-center">
