--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -80,11 +80,11 @@
     </nav>
     <!--body-->
     <div class="card">
-      <img src="../img/banner-gov.png" style="border-radius: 50px; border-bottom: 2px solid black;max-height: 100px;">
+      <img src="../img/gov/banner-gov.png" style="border-radius: 50px; border-bottom: 2px solid black;max-height: 100px;">
     </div>
 
     <!--content-->
-      <center><img src="../img/government-logo.png" style="max-width:50%; border-radius: 50%; margin-top: 30px; box-shadow: 0px 0px 20px purple;"></center>
+      <center><img src="../img/gov/government-logo.png" style="max-width:50%; border-radius: 50%; margin-top: 30px; box-shadow: 0px 0px 20px purple;"></center>
 
     <div class="container mt-3">
       <table class="table table-bordered table-sm p-3 text-center">
@@ -98,79 +98,79 @@
         </thead>
         <tbody>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;">Ucin Vird</b></td>
             <td><b style="color:darkgray;">Ucin</b></td>
             <td><b style="color:darkorange;">Governor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;">Nicholas Scout</b></td>
             <td><b style="color:purple;">SilumanKatak</b></td>
             <td><b style="color:darkorange;">Deputy Governor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Regional People's Representative</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary Regional</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Governor's Staff</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Religion</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Law</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Lawyer</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Treasurer</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Licensor</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Bodyguard</b></td>
           </tr>
           <tr class="table-light">
-            <th scope="row" style="color:darkorange;"><img src="../img/government-logo.png" style="max-width:30px;"></th>
+            <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Driver</b></td>
@@ -181,7 +181,7 @@
 
     <!--Discord-->
     <div class="container">
-      Untuk Sementara Discord Khusus Pemerintahan belum dibuat
+      <center>Discord Resmi Pemerintahan Magnefica <br><a href="https://discord.com/invite/RFZYrYkGBq" class="btn mb-3" style="background:darkblue; color: white;"><i class='bx bxl-discord-alt'></i> PEMERINTAHAN • MAGNEFICA</a></center>
     </div>
 
     <!--copyright-->
