--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -182,25 +182,103 @@
               </div>
             </li>
           </ol>
-          <hr>
-          <h5 class="card-title">Pasal 4 : Penolakan Ajakan Roleplay</h5>
+      </div>
+      <center>
+        <h5>BAB III</h5>
+        <h5>PENJELASAN DAN KONSEKUENSI</h5><hr>
+      </center>
+      <div class="alert alert-success" role="alert">
+        <h5 class="card-title">Pasal 4 : Chicken Runing</h5>
           <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div>
-                  -
+                  <b>Penjelasan :</b> Player menghindari atau lari dari situasi konflik atau bahaya tanpa menggunakan RP (/me melarikan diri) yang ditujukan kepada dirinya sehingga player yang ingin ber-Roleplay dengannya gagal melakukan RP nya dengan baik. 
                 </div>
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div>
-                  -
+                  <b>Konsekuensi :</b> Barangsiapa yang melakukan Pasal 4 Ayat 1 maka akan dikenakan hukuman Jail Admin selama 30 Menit + Warn 1. 
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+        <h5 class="card-title">Pasal 5 : Non RP Jobs</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Penjelasan :</b> Player bekerja terus-menerus sampai tidak ada waktu untuk ber-istirahat atau ber-santai dengan player lain. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Konsekuensi :</b> Barangsiapa yang melakukan Pasal 5 Ayat 1 maka akan dikenakan hukuman Jail Admin selama 20 Menit. 
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+        <h5 class="card-title">Pasal 6 : QuickScrolling / Scrolling Weapon</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Penjelasan :</b> Player melakukan pergantian senjata secara cepat atau berulang-ulang. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Konsekuensi :</b> Barangsiapa yang melakukan Pasal 6 Ayat 1 maka akan dikenakan hukuman Jail Admin selama 30 Menit + Warn 1. 
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+        <h5 class="card-title">Pasal 7 : Non RP Fear</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Penjelasan :</b> Player tidak memiliki rasa takut kepada apapun. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Konsekuensi :</b> Barangsiapa yang melakukan Pasal 7 Ayat 1 maka akan dikenakan hukuman Jail Admin selama 30 Menit + Warn 2. 
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+        <h5 class="card-title">Pasal 8 : Non RP Behavior</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Penjelasan :</b> Player melakukan aktifitas atau suatu kegiatan yang tidak masuk akal. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  <b>Konsekuensi :</b> Barangsiapa yang melakukan Pasal 5 Ayat 1 maka akan dikenakan hukuman Jail Admin selama 20 Menit + Warn 2. 
                 </div>
               </div>
             </li>
           </ol>
       </div>
+
     </div>
 
     <!--copyright-->
