--- a/ann.html
+++ b/ann.html
@@ -83,8 +83,14 @@
       <div class="card-header">
         Server Announcement
       </div>
+        <div class="alert alert-danger" role="alert">
+          <h4 class="alert-heading">Server Maintence!</h4>
+          <p>Yahh... server lagi maintence nih, mohon maaf ya atas ketidak nyamanannya.</p>
+          <hr>
+          <p class="mb-0">This posted in <b>17 January 2024</b>.</p>
+        </div>
         <div class="alert alert-success" role="alert">
-          <h4 class="alert-heading">Server Online!</h4>
+          <h4 class="alert-heading">Server Maintence!</h4>
           <p>Horee! server dalam keadaan online, silahkan masuk dan selamat bersenang-senang.</p>
           <hr>
           <p class="mb-0">This posted in <b>08 January 2024</b>.</p>
