--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             color: lime !important;
         }
 
+        .navbar-toggler {
+            background-color: #008000; /* Warna hijau untuk tema hacker */
+            border: 1px solid #008000;
+        }
+
+        .navbar-toggler-icon {
+            background-color: lime; /* Warna lime untuk ikon hamburger */
+        }
+
         .card {
             background-color: #222;
             color: lime;
@@ -93,6 +102,7 @@
             color: lime;
         }
     </style>
+
 </head>
 <body>
 <!--header-->
