--- a/perusahaan-swasta.html
+++ b/perusahaan-swasta.html
@@ -127,6 +127,11 @@
 </head>
 <body>
 
+  <!-- Alert Informasi Roleplay -->
+  <script>
+    alert("Informasi dalam halaman ini hanya bersifat roleplay.");
+  </script>
+
   <!-- Navigasi -->
   <header>
     <a href="index.html">Kembali ke Beranda</a>
@@ -153,9 +158,9 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">No Reg.</th>
-          <th scope="col">Nama Perusahaan</th>
-          <th scope="col">Nama Atasan</th>
+          <th scope="col">No Reg</th>
+          <th scope="col">Perusahaan</th>
+          <th scope="col">Owner</th>
           <th scope="col">Kontak</th>
         </tr>
       </thead>
@@ -166,13 +171,7 @@
           <td>Nicholas Scout</td>
           <td> - </td>
         </tr>
-        <tr>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
-        <!-- Tambahkan lebih banyak baris sesuai kebutuhan -->
+        <!-- Tambahkan lebih banyak baris sesuai kebutuhan menggunakan <tr></tr> -->
       </tbody>
     </table>
   </div>
