--- a/update.html
+++ b/update.html
@@ -71,6 +71,7 @@
                 <li><a class="dropdown-item" href="moreinformation/admininformation.html">Admin information</a></li>
                 <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
                 <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
+                        <li><a class="dropdown-item" href="perusahaan-swasta.html">Perusahaan Swasta</a></li>
                 <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
               </ul>
             </li>
