--- a/about.html
+++ b/about.html
@@ -84,6 +84,7 @@
             padding: 10px;
             margin-bottom: 15px;
             box-sizing: border-box;
+            color: green;
         }
 
         #contact-form button {
@@ -107,62 +108,64 @@
 </head>
 <body>
     <!--header-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"> <img src="img/icon.png" width="50px">Magnefica </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ann.html">Announcement</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="update.html">Updates</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Fraction
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="goodside/gov.html">Magnefica Government</a></li>
-                            <li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>
-                            <li><a class="dropdown-item" href="goodside/police.html">Magnefica Police</a></li>
-                            <li><a class="dropdown-item" href="goodside/medic.html">Magnefica Medic</a></li>
-                            <li><a class="dropdown-item" href="goodside/foodtrader.html">Magnefica Food trader</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Family
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">- No Family yet -</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            More information
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="moreinformation/admininformation.html">Admin information</a></li>
-                            <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
-                            <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img src="img/icon.png" width="50px">Magnefica </a>
+        <div id="clock" class="me-3"></div>
+        <div id="calendar"></div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ann.html">Announcement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="update.html">Updates</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Fraction
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="goodside/gov.html">Magnefica Government</a></li>
+                        <li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>
+                        <li><a class="dropdown-item" href="goodside/police.html">Magnefica Police</a></li>
+                        <li><a class="dropdown-item" href="goodside/medic.html">Magnefica Medic</a></li>
+                        <li><a class="dropdown-item" href="goodside/foodtrader.html">Magnefica Food trader</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Family
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">- No Family yet -</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        More information
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="moreinformation/admininformation.html">Admin information</a></li>
+                        <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
+                        <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
                         <li><a class="dropdown-item" href="perusahaan-swasta.html">Perusahaan Swasta</a></li>
-                            <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+                        <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
     <!--body-->
     <div class="card">
         <div class="card-header">
@@ -255,6 +258,29 @@
 
     <!--copyright-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Clock and calendar update function
+        function updateTime() {
+            var now = new Date();
+            var hours = now.getHours();
+            var minutes = now.getMinutes();
+            var seconds = now.getSeconds();
+            var formattedTime = hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds;
+            document.getElementById('clock').innerText = formattedTime;
+
+            var months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+            var days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+
+            var formattedDate = days[now.getDay()] + ', ' + now.getDate() + ' ' + months[now.getMonth()] + ' ' + now.getFullYear();
+            document.getElementById('calendar').innerText = formattedDate;
+        }
+
+        setInterval(updateTime, 1000);
+        updateTime(); // Call the function immediately to set initial values
+    });
+</script>
 
     <center>
         <div id="copyright">
